--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
